--- a/GTABrasil Updater/packages.config
+++ b/GTABrasil Updater/packages.config
@@ -3,6 +3,7 @@
   <package id="AltoHttp" version="1.5.2" targetFramework="net472" />
   <package id="DiscordRichPresence" version="1.1.3.18" targetFramework="net472" />
   <package id="DotNetZip" version="1.16.0" targetFramework="net472" />
+  <package id="FileTransferManager" version="1.0.6" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
   <package id="Unzip" version="0.5" targetFramework="net472" />
